--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 
 body{
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,6 +7,23 @@ body{
     background: linear-gradient(to right, rgb(57, 6, 153), rgb(204, 9, 74));
 }
 
+ .flipText{
+    background: blue;
+    margin-left: 50px;
+    border-radius: 20px;
+    padding: 20px;
+    cursor: pointer;
+ }
+.flipText p{
+    text-align: justify;
+    color: white;
+    font-size: 20px; 
+   
+}
+.flipText:hover{
+    background-color:black;
+    color: white;
+}
 .container{
     margin: auto;
     display: flex;
